--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^5.22.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "openai": "^6.16.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -28,7 +28,6 @@
     "@types/pg": "^8.16.0",
     "dotenv": "^17.2.3",
     "nodemon": "^3.1.11",
-    "prisma": "^7.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
