Implement end-to-end RAG API with Qdrant retrieval and Ollama Mistral

--- a/retrieval-service/.env.example
+++ b/retrieval-service/.env.example
@@ -2,4 +2,4 @@ QDRANT_URL=your-qdrant-cluster-url
 QDRANT_API_KEY=your_qdrant-api-key
 COLLECTION_NAME=infoverse_documents
 
-EMBEDDING_API=http://localhost:8001
+EMBEDDING_API=http://127.0.0.1:8001
